<resources>
    <string name="app_name">Coneto</string>
    <string name="register_text">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="bio">Bio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>